--- a/src/angular-app/common/directive/dc-example.html
+++ b/src/angular-app/common/directive/dc-example.html
@@ -1,13 +1,15 @@
 <div class="dc-example">
-    <div class="deleteX pull-right"><i ng-click="remove(index)" title="Delete Example Sentence" class="icon-remove"></i></div>
-    <div ng-repeat="field in config.fieldNames">
-        <ng-switch on="config.fields[field].type">
-            <div ng-switch-when="multitext">
-                <dc-multitext definition="config.fields[field]" model="model[field]"></multitext>
-            </div>
-            <div ng-switch-default>
-                unsupported type {{config.fields[field].type}} for field {{field}}
-            </div>
-        </ng-switch>
+    <div class="deleteX pull-right"><i data-ng-click="remove(index)" title="Delete Example Sentence" class="icon-remove"></i></div>
+    <div data-ng-repeat="(fieldName, field) in config.fields">
+ 	    <div data-ng-if="field.visible">
+	        <div data-ng-switch data-on="config.fields[fieldName].type">
+	            <div data-ng-switch-when="multitext">
+	                <dc-multitext definition="config.fields[fieldName]" model="model[fieldName]"></dc-multitext>
+	            </div>
+	            <div data-ng-switch-default>
+	                unsupported type {{config.fields[fieldName].type}} for field {{fieldName}}
+	            </div>
+	        </div>
+ 	    </div>
     </div>
 </div>
