--- a/src/angular-app/common/directive/dc-sense.html
+++ b/src/angular-app/common/directive/dc-sense.html
@@ -1,29 +1,29 @@
 <div class="dc-sense">
-    <div class="deleteX pull-right"><i ng-click="remove(index)" title="Delete '{{getSenseTitle(sense)}}'" class="icon-remove"></i></div>
-    <div ng-repeat="field in config.fieldNames">
-        <ng-switch on="config.fields[field].type">
-            <div ng-switch-when="optionlist">
+    <div class="deleteX pull-right"><i data-ng-click="remove(index)" title="Delete '{{getSenseTitle(sense)}}'" class="icon-remove"></i></div>
+    <div data-ng-repeat="field in config.fieldNames">
+        <div class="data-ng-switch" data-on="config.fields[field].type">
+            <div data-ng-switch-when="optionlist">
                 <dc-optionlist definition="config.fields[field]" model="model[field]"></dc-optionlist>
             </div>
-            <div ng-switch-when="multitext">
-                <dc-multitext definition="config.fields[field]" model="model[field]"></multitext>
+            <div data-ng-switch-when="multitext">
+                <dc-multitext definition="config.fields[field]" model="model[field]"></dc-multitext>
             </div>
-            <div ng-switch-when="fields">
-                <ng-switch on="field">
-                    <div ng-switch-when="examples">
-                        <div class="animate-repeat" ng-repeat="example in model.examples"> 
+            <div data-ng-switch-when="fields">
+                <div class="data-ng-switch" data-on="field">
+                    <div data-ng-switch-when="examples">
+                        <div class="animate-repeat" data-ng-repeat="example in model.examples"> 
                             <dc-example remove="deleteExample" index="$index" config="config.fields.examples" model="example"></dc-example>
                         </div>
-                        <div class="addItem"><a ng-click="addExample()">Add Example</a></div>
+                        <div class="addItem"><a data-ng-click="addExample()">Add Example</a></div>
                     </div>
-                    <div ng-switch-default>
+                    <div data-ng-switch-default>
                         unsupported config field: {{field}}
                     </div>
-                </ng-switch>
+                </div>
             </div>
-            <div ng-switch-default>
+            <div data-ng-switch-default>
                 unsupported type {{config.fields[field].type}} for field {{field}}
             </div>
-        </ng-switch>
+        </div>
     </div>
 </div>
