--- a/src/angular-app/languageforge/lexicon/directive/dc-sense.html
+++ b/src/angular-app/languageforge/lexicon/directive/dc-sense.html
@@ -1,7 +1,7 @@
 <div class="dc-sense">
     <div class="deleteX pull-right"><i data-ng-click="remove(index)" title="Delete '{{getSenseTitle(sense)}}'" class="icon-remove"></i></div>
     <div data-ng-repeat="field in config.fieldNames">
-        <ng-switch data-on="config.fields[field].type">
+        <div data-ng-switch data-on="config.fields[field].type">
             <div data-ng-switch-when="optionlist">
                 <dc-optionlist definition="config.fields[field]" model="model[field]"></dc-optionlist>
             </div>
@@ -9,21 +9,21 @@
                 <dc-multitext definition="config.fields[field]" model="model[field]"></dc-multitext>
             </div>
             <div data-ng-switch-when="fields">
-                <ng-switch data-on="field">
+                <div data-ng-switch data-on="field">
                     <div data-ng-switch-when="examples">
                         <div class="animate-repeat" data-ng-repeat="example in model.examples"> 
-                            <dc-example remove="deleteExample" index="$index" config="config.fields.examples" model="example"></dc-example>
+                           	<dc-example remove="deleteExample" index="$index" config="config.fields.examples" model="example"></dc-example>
                         </div>
                         <div class="addItem"><a data-ng-click="addExample()">Add Example</a></div>
                     </div>
                     <div data-ng-switch-default>
                         unsupported config field: {{field}}
                     </div>
-                </ng-switch>
+                </div>
             </div>
             <div data-ng-switch-default>
                 unsupported type {{config.fields[field].type}} for field {{field}}
             </div>
-        </ng-switch>
+        </div>
     </div>
 </div>
