--- a/src/angular-app/bellows/directive/pui-language.html
+++ b/src/angular-app/bellows/directive/pui-language.html
@@ -1,12 +1,12 @@
 <div>
 	<div style="margin-bottom:10px">
-		<input width="4" placeholder="search" type="text" class="input-medium search-query" data-ng-model="searchText" />
+		<input width="4" placeholder="search" type="text" 
+			class="input-medium search-query" data-ng-model="searchText" />
 		<button class="btn btn-success" data-ng-click="search()" data-ng-show="searchText && searchText != ''">
-			<i class="icon-search"></i> Search
-		</button>
-		<span style="margin-left:10px" title="Clear Search" data-ng-click="clearSearch()" data-ng-show="searchText && searchText != ''">
-			<i class="icon-remove" style="color:black; cursor: pointer"></i>
-		</span>
+			<i class="icon-search"></i> Search</button>
+		<span style="margin-left:10px" title="Clear Search" data-ng-click="clearSearch()" 
+			data-ng-show="searchText && searchText != ''">
+			<i class="icon-remove" style="color:black; cursor: pointer"></i></span>
 	</div>
 	
 	<table class="table table-condensed table-hover" style="height:400px">
@@ -17,7 +17,8 @@
 		</thead>
 		<tbody>
 			<tr data-ng-class="{info: currentCode == language.code.three}" class="animate-repeat" 
-				data-ng-click="selectLanguage(language)" data-ng-repeat="language in languages | filter:filterText">
+				data-ng-click="selectLanguage(language)" 
+				data-ng-repeat="language in languages | filter:filterText track by languages.code.three">
 				<td>{{language.name}}</td>
 				<td>{{(language.code.two) ? language.code.two : language.code.three}}</td>
 				<td>{{language.country.join(", ")}}</td>
@@ -27,13 +28,11 @@
 	</table>
 	
 	<div class="pull-right" data-ng-transclude></div>
-	<small>
+	<p>
 		<a href="http://www.infoterm.info/standardization/iso_639_1_2002.php" target="_blank">
-			<i class="icon-globe"></i> About Language 639-1 Codes
-		</a>
+			<small><i class="icon-globe"></i> About Language 639-1 Codes</small></a>
 		<br />
 		<a href="http://www.sil.org/iso639-3/" target="_blank">
-			<i class="icon-globe"></i> About Language 639-3 Codes
-		</a>
-	</small>
+			<small><i class="icon-globe"></i> About Language 639-3 Codes</small></a>
+	</p>
 </div>
