--- a/src/angular-app/languageforge/lexicon/ng-app.html
+++ b/src/angular-app/languageforge/lexicon/ng-app.html
@@ -15,11 +15,11 @@
 				<a class="btn dropdown-toggle" data-toggle="dropdown" data-tooltip-placement="left" data-tooltip="Settings" href="#">
 					<i class="icon-cog icon-2x"></i>&nbsp;&nbsp;<span class="caret"></span></a>
 				<ul class="dropdown-menu pull-right">
+					<li data-ng-show="isItemVisible('configuration')"><a href="#/p/{{projectId}}/configuration">Dictionary Configuration</a></li>
+					<li class="divider" data-ng-show="isItemVisible('configuration')"></li>
 					<li data-ng-show="isItemVisible('importExport')"><a href="#/p/{{projectId}}/importExport">Import/Export</a></li>
-					<li class="divider" data-ng-show="isItemVisible('importExport')"></li>
-					<li data-ng-class="{disabled: !isItemVisible('configuration')}"><a href="#/p/{{projectId}}/configuration">Dictionary Configuration</a></li>
-					<li data-ng-class="{disabled: true}"><a href="#/p/{{projectId}}/settings">Project Settings</a></li>
-					<li data-ng-class="{disabled: false}"><a href="#/p/{{projectId}}/users">User Management</a></li>
+					<li data-ng-show="true"><a href="#/p/{{projectId}}/settings">Project Settings</a></li>
+					<li data-ng-show="true"><a href="#/p/{{projectId}}/users">User Management</a></li>
 				</ul>
 			</div>
 			<div class="btn-group" data-ng-show="isItemVisible('dashboard')">
